# ringModulator_lv2

./: .gitignore  CMakeLists.txt  README.md
data/: manifest.ttl.in  seealso.ttl.in
src/: audioProcess.cpp  audioProcess.h  oscillator.h  randomGen.h  sineWave.h
